Support script modify iframe scrolling, marginWidth and marginHeight attr

For scrolling:
call FrameView::setNeddLayout in LocalFrame to update the behaviour.

For marginWidth and marginHeight:
call setIntegralAttribute to set the attr

This patch works for LocalFrame and RemoteFrame,

BUG=642603

Review-Url: https://codereview.chromium.org/2507023002
Cr-Commit-Position: refs/heads/master@{#434047}

Former-commit-id: 2e671cf88d579e7a2392dff0383f47dae2655ab5